2009-01-14  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 566571 – gtk.Buildable interface method override is not
	recognized

	* gobject/gobjectmodule.c (pyg_type_add_interfaces): New function,
	break out code repetition out of pyg_type_register().

	* tests/test_subtype.py
	(TestSubType.test_gtk_buildable_virtual_method): New test
	case (inactive).

2009-01-14  Paul Pogonyshev  <pogonyshev@gmx.net>

	Bug 566706 – cleanup GIO overrides

	* gio/gio.override (pygio_notify_new)
	(pygio_notify_using_optional_callback)
	(pygio_notify_callback_is_valid_full)
	(pygio_notify_callback_is_valid)
	(pygio_notify_reference_callback): New functions.
	(pygio_notify_free): Rename from pygio_free_notify() and extend.
	(async_result_callback_marshal): Warn if new `referenced' field is
	not set (programming error).
	(_wrap_g_drive_eject, _wrap_g_drive_poll_for_media)
	(_wrap_g_mount_unmount, _wrap_g_mount_eject)
	(_wrap_g_mount_remount): Lots of cleanup: use new functions
	instead of repeating code, unify and fix error handling.

	* gio/gfile.override (_wrap_g_file_read_async)
	(_wrap_g_file_load_contents_async)
	(_wrap_g_file_enumerate_children_async)
	(_wrap_g_file_mount_mountable, _wrap_g_file_unmount_mountable)
	(_wrap_g_file_mount_enclosing_volume, _wrap_g_file_copy)
	(_wrap_g_file_copy_async, _wrap_g_file_move)
	(_wrap_g_file_append_to_async, _wrap_g_file_create_async)
	(_wrap_g_file_replace_async, _wrap_g_file_query_info_async)
	(_wrap_g_file_replace_contents_async): Similar cleanup.

	* gio/gfileenumerator.override
	(_wrap_g_file_enumerator_next_files_async): Similar cleanup.

	* gio/gicon.override (_wrap_g_loadable_icon_load_async): Similar
	cleanup.

	* gio/ginputstream.override (_wrap_g_input_stream_close_async):
	Similar cleanup.

	* gio/goutputstream.override (_wrap_g_output_stream_write_async)
	(_wrap_g_output_stream_close_async): Similar cleanup.

	* gio/gvolume.override (_wrap_g_volume_mount)
	(_wrap_g_volume_eject): Similar cleanup.
